--- a/public/index.html
+++ b/public/index.html
@@ -3,17 +3,21 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
     <noscript>
-      <strong
-        >We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work
-        properly without JavaScript enabled. Please enable it to
-        continue.</strong
-      >
+      <strong>
+        We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work
+        properly without JavaScript enabled. Please enable it to continue.
+      </strong>
+      <strong>
+        Przepraszamy, ale <%= htmlWebpackPlugin.options.title %> nie będzie
+        działać prawidłowo bez włączonej w przeglądarce obsługi JavaScript.
+        Prosimy - włącz obsługę JavaScript.
+      </strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
