changed style for better fit to forums styles

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
         Prosimy - włącz obsługę JavaScript.
       </strong>
     </noscript>
-    <div id="app"></div>
+    <div id="wmchat"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
